# embree-rs

examples/next_hit/: Cargo.toml
examples/next_hit/src/: main.rs
examples/support/: Cargo.toml
examples/support/src/: display.rs  lib.rs
examples/triangle/src/: main.rs
examples/triangle_geometry/: Cargo.toml
examples/user_geometry/: Cargo.toml
examples/user_geometry/src/: main.rs
src/: context.rs  device.rs  geometry.rs  lib.rs  scene.rs
src/ray/: packet.rs  soa.rs
