[package]
name = "support"
version = "0.1.0"
authors = ["Will Usher <will@willusher.io>"]
edition = "2021"

[dependencies]
image = "0.25"
arcball = "1.1.0"
cgmath = "0.18"
clock_ticks = "0.1.1"
egui = { version = "0.23", features = ["bytemuck"] }
egui-winit = "0.23"
egui-wgpu = "0.23"
embree = { path = "../.." }
wgpu = "0.17"
winit = "0.28"
futures = { version = "0.3", features = ["executor"] }
rayon = "1.10"

